Fixed padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ a:hover {
 }
 
 .work-padding {
-  padding: 10vw 0 6vw 0;
+  padding: 20px 0 20px 0;
 }
 
 /* Content Styling */
@@ -240,7 +240,7 @@ footer ul li a:active {
 }
 
 .cumulus-section-description p {
-  padding: 0 4vw 10px 4vw;
+  padding: 0 4vw 30px 4vw;
 }
 
 .blocjams-section {
@@ -1064,7 +1064,7 @@ label {
   .cumulus-section-description {
     grid-column: 7 / span 8;
     grid-row: 2;
-    border-bottom: 10px solid #dadada;
+    border-bottom: 1px solid #FFF;
   }
   .cumulus-section-description h5 {
     padding: 10px 0;
